--- a/application/themes/yesilcms/assets/css/main.css
+++ b/application/themes/yesilcms/assets/css/main.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-display: swap;
   src: url("../fonts/lobster-regular-webfont.woff2") format("woff2"),
-    url("../fonts/lobster-regular-webfont.woff") format("woff");
+  url("../fonts/lobster-regular-webfont.woff") format("woff");
 }
 
 html {
@@ -311,11 +311,11 @@ h6,
 .card-status {
   border: 1px solid transparent;
   box-shadow: 0 15px 10px -15px rgba(0, 0, 0, 0.6),
-    inset 0 0 5px rgba(0, 0, 0, 0.4);
+  inset 0 0 5px rgba(0, 0, 0, 0.4);
   border-image: linear-gradient(
-    to left,
-    rgba(255, 0, 0, 0.8) 0%,
-    rgba(0, 174, 255, 0.8) 100%
+          to left,
+          rgba(255, 0, 0, 0.8) 0%,
+          rgba(0, 174, 255, 0.8) 100%
   );
   border-image-slice: 1;
   border-image-width: 1px;
@@ -407,7 +407,7 @@ h6,
   transition: all ease .3s;*/
 
   transition: color 500ms, fill 500ms, background-color 500ms,
-    border-color 500ms;
+  border-color 500ms;
   outline: none;
   font-weight: 700;
   background-color: #006fb2;
@@ -624,11 +624,11 @@ h6,
 
 .uk-tile.alliance-bar {
   background: linear-gradient(
-    to bottom,
-    #1e7fe1 0%,
-    #1e7fe1 50%,
-    #196bbd 51%,
-    #196bbd 100%
+          to bottom,
+          #1e7fe1 0%,
+          #1e7fe1 50%,
+          #196bbd 51%,
+          #196bbd 100%
   );
   border-width: 1px 0 1px 1px;
   border-style: solid;
@@ -642,11 +642,11 @@ h6,
 
 .uk-tile.horde-bar {
   background: linear-gradient(
-    to bottom,
-    #e11e1e 0%,
-    #e11e1e 50%,
-    #bd1919 51%,
-    #bd1919 100%
+          to bottom,
+          #e11e1e 0%,
+          #e11e1e 50%,
+          #bd1919 51%,
+          #bd1919 100%
   );
   border-width: 1px 1px 1px 0;
   border-style: solid;
@@ -709,7 +709,7 @@ h6,
 }
 
 .uk-subnav-divider.subnav-points
-  > :nth-child(n + 2):not(.uk-first-column)::before {
+> :nth-child(n + 2):not(.uk-first-column)::before {
   margin-right: 10px;
   border-left-color: rgba(255, 255, 255, 0.15);
 }
@@ -916,7 +916,7 @@ h6,
   background: rgba(0, 0, 0, 0.15);
   cursor: default;
   box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.4),
-    0 0 0 1px rgba(255, 255, 255, 0.1);
+  0 0 0 1px rgba(255, 255, 255, 0.1);
   padding: 5px;
 }
 
@@ -1167,7 +1167,7 @@ tbody tr:last-child {
 
 .topic-author-staff .topic-author-avatar {
   box-shadow: 0 0 0 1px rgb(255 255 255 / 30%), 0 0 0 3px #00aeff,
-    0 0 0 4px black, 0 0 15px 5px rgb(0 174 255 / 75%);
+  0 0 0 4px black, 0 0 15px 5px rgb(0 174 255 / 75%);
 }
 
 .topic-author-avatar img {
@@ -1202,7 +1202,7 @@ tbody tr:last-child {
 
 .author-rank-staff {
   box-shadow: 0 0 0 1px rgb(255 255 255 / 30%), 0 0 0 3px #00aeff,
-    0 0 0 4px black, 0 0 5px 4px rgb(0 174 255 / 75%);
+  0 0 0 4px black, 0 0 5px 4px rgb(0 174 255 / 75%);
   background-color: #00aeff;
   border-radius: 2px;
   color: #fff;
@@ -1270,20 +1270,20 @@ option:not(:hover) {
 
 select.minimal {
   background-image: linear-gradient(45deg, transparent 50%, #fff 50%),
-    linear-gradient(135deg, #fff 50%, transparent 50%),
-    linear-gradient(to right, #fff, #fff);
+  linear-gradient(135deg, #fff 50%, transparent 50%),
+  linear-gradient(to right, #fff, #fff);
   background-position: calc(100% - 20px) calc(1em + 2px),
-    calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+  calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
   background-size: 5px 5px, 5px 5px, 1px 1.5em;
   background-repeat: no-repeat;
 }
 
 select.minimal:focus {
   background-image: linear-gradient(45deg, #39f 50%, transparent 50%),
-    linear-gradient(135deg, transparent 50%, #39f 50%),
-    linear-gradient(to right, #39f, #39f);
+  linear-gradient(135deg, transparent 50%, #39f 50%),
+  linear-gradient(to right, #39f, #39f);
   background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em,
-    calc(100% - 2.5em) 0.5em;
+  calc(100% - 2.5em) 0.5em;
   background-size: 5px 5px, 5px 5px, 1px 1.5em;
   background-repeat: no-repeat;
   border-color: #00aeff;
@@ -1345,6 +1345,7 @@ main {
   align-items: center;
   justify-content: center;
 }
+
 .um-cog {
   margin: 100px 0 35px 0;
 }
@@ -1366,4 +1367,20 @@ main {
   font-size: 1.5em;
   font-weight: 100;
   margin: 15px 0 100px 0 !important;
+}
+
+.pvp-name {
+  color: #f8b700;
+}
+
+.pvp-total {
+  color: #e7ad00;
+}
+
+.pvp-today {
+  color: #ff9800;
+}
+
+.pvp-yesterday {
+  color: #ff5722;
 }
