Fix for HTML Mail templates on some specific OS, stlye fixes

--- a/application/themes/yesilcms/assets/css/main.css
+++ b/application/themes/yesilcms/assets/css/main.css
@@ -294,6 +294,10 @@ h6,
   transition: all ease-in 0.2s;
 }
 
+.news-img {
+  max-height:500px;
+}
+
 .uk-card-media-left:after {
   content: "";
   position: absolute;
