3D Model Viewer reword, bug fixes
Reworked 3D Model Viewer
Local API for Vanilla to Classic Item Display IDs (wowtools api not working anyome)
Bug Fixes
Design/UX Improvements

--- a/application/modules/armory/assets/css/armory.css
+++ b/application/modules/armory/assets/css/armory.css
@@ -914,5 +914,10 @@
   -moz-animation: fadeIn 1s infinite alternate;
   -o-animation: fadeIn 1s infinite alternate;
   animation: fadeIn 1s infinite alternate;
+}
 
+#placeholder {
+  display: block;
+  opacity: 0;
+  transition: opacity 1s ease-in;
 }
